<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
	child.project.url.inherit.append.path="false">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dev.caceresenzo.gitbook</groupId>
	<artifactId>gitbook-parent</artifactId>
	<version>latest</version>
	<name>gitbook-parent</name>
	<description>A GitBook.com API client written in Java.</description>

	<packaging>pom</packaging>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<lombok.version>1.18.34</lombok.version>
	</properties>

	<modules>
		<module>client</module>
		<module>spring-boot-starter</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<url>https://github.com/Caceresenzo/gitbook-java</url>

	<scm
		child.scm.connection.inherit.append.path="false"
		child.scm.developerConnection.inherit.append.path="false"
	>
		<connection>scm:git:git://github.com/Caceresenzo/gitbook-java.git</connection>
		<developerConnection>scm:git:ssh://github.com:Caceresenzo/gitbook-java.git</developerConnection>
		<url>http://github.com/Caceresenzo/gitbook-java/tree/master</url>
	</scm>

	<licenses>
		<license>
			<name>MIT</name>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>caceresenzo</id>
			<name>Enzo CACERES</name>
			<email>caceresenzo1502@gmail.com</email>
			<url>https://github.com/Caceresenzo</url>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/Paris</timezone>
		</developer>
	</developers>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.4.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
							<waitUntil>published</waitUntil>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>verify</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.6.3</version>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<stylesheet>java</stylesheet>
							<doclint>none</doclint>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>